# caps-jam

./: railpack.toml
client/: .env  daydreams.ts  index.html  localhost+2-key.pem  localhost+2.pem  package.json  vite.config copy.ts
client-v2/: package.json  svelte.config.js  vite.config.ts
client-v2/src/: app.html
client-v2/src/lib/: index.ts  parser.ts
client-v2/src/lib/game/: GameBoard.svelte  HandBar.svelte  InteractiveBoard.svelte  gameState.ts
client-v2/src/lib/scene/: board.svelte  pieces.svelte  tile.svelte
client-v2/src/routes/: +page.svelte
client-v2/src/routes/game/: +page.svelte
client-v2/src/routes/play/: +page.svelte
client-v2/src/routes/three/: +page.svelte
client-v2/wasm/cairo/: simulate.cairo  test_output.cairo  types.cairo
client-v2/wasm/pkg/: caps_wasm_bg.wasm
client/src/: App.svelte  app.css
client/src/lib/: Counter.svelte  Game.svelte  Login.svelte  Matchmaking.svelte  account.svelte.ts  caps.svelte.ts  planetelo.svelte.ts  planetelo_sepolia_manifest.json  router.ts
client/src/lib/3d/: cap.svelte
client/src/lib/bindings/: contracts.gen.ts  models.gen.ts
client/src/lib/dojo/: contracts.gen.ts  models.gen.ts  planetelo_sepolia_manifest.json  simulate.ts
contracts/: .tool-versions  Scarb.toml  dojo_sepolia.toml  manifest_sepolia.json
contracts-v2/: Scarb.toml
contracts-v2/src/: lib.cairo
contracts-v2/src/systems/: actions.cairo
contracts-v2/src/types/: Game.cairo
contracts/bindings/typescript/: contracts.gen.ts  models.gen.ts
contracts/src/: conversions.cairo  helpers.cairo  lib.cairo  models.cairo  planetelo.cairo  simulate_helpers.cairo
contracts/src/models/: cap.cairo  effect.cairo  game.cairo  set.cairo
contracts/src/sets/: set_zero.cairo
contracts/src/systems/: actions.cairo
contracts/src/tests/: test_world.cairo
core-v2/src/logic/: process.cairo
core-v2/src/sets/: set_zero.cairo  set_zero_two.cairo
core-v2/src/types/: cap.cairo
core/src/: lib.cairo
core/src/logic/: helpers.cairo  process.cairo
core/src/types/: cap.cairo  game.cairo  set.cairo
executable/: Cargo.toml  Scarb.toml
executable/runner/: Cargo.toml  build.sh
executable/runner/src/: lib.rs  main.rs
executable/src/: lib.cairo  main.rs  simulate.cairo
executable/src/types/: cap.cairo  effect.cairo
refactor/core/: Scarb.toml
wasm/: Cargo.toml  Scarb.toml  build.sh  test_simulate.sh
wasm/cairo/: .gitignore  simulate.cairo  simulate.sierra  test_input.cairo  test_input.sierra  test_output.cairo  types.cairo  types.sierra
wasm/old-cairo/: helpers.cairo  lib.cairo  set_zero.cairo
wasm/old-cairo/types/: game.cairo
wasm/pkg/: README.md  caps_wasm.d.ts  caps_wasm.js  caps_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.cairo  lib.rs  main.cairo
wasm/src/types/: cap.cairo  effect.cairo  game.cairo
(+15 files in other folders)
