[package]
name = "caps-wasm"
description = "Cairo-VM WASM bindings for caps-jam"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# Cairo dependencies - matching cairo-vm workspace configuration for WASM compatibility
cairo-lang-sierra = { version = "2.12.0-dev.0", default-features = false }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", branch = "main", default-features = false }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm.git", branch = "main", default-features = false }

[profile.release]
# Optimize for small code size for WASM
opt-level = "s"
