[package]
name = "executable"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-vm = { version = '2.2.0'}
wasm-bindgen = "0.2.100"
cairo-lang-runner = { package = "cairo-lang-runner", git = "https://github.com/starkware-libs/cairo.git", default-features = false}
cairo-lang-executable = { package = "cairo-lang-executable", git = "https://github.com/starkware-libs/cairo.git", default-features = false}
anyhow = "1.0.98"
serde_json = "1.0.140"
