[package]
name = "executable"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-vm = { version = '2.2.0'}
wasm-bindgen = "0.2.100"
cairo-lang-runner = { version = "2.12.0-dev.0", default-features = false}
cairo-lang-executable = { version = "2.12.0-dev.0", default-features = false}
anyhow = "1.0.98"
serde_json = "1.0.140"
