[package]
name = "executable"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cairo-vm = { version = '2.2.0', default-features=false}
wasm-bindgen = "0.2.100"
cairo-lang-runner = { version = "2.12.0-dev.0", default-features = false}
cairo-lang-executable = { version = "2.12.0-dev.0", default-features = false}
anyhow = "1.0.98"
serde_json = "1.0.140"
itertools = "0.14.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"
getrandom = { version = "0.2.16", features = ["js"] }

[dependencies.getrandom-v3]
package = "getrandom"
version = "0.3.3"  
features = ["wasm_js"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']